@@ -4,7 +4,12 @@ ${MIRROR_WGET}/download_package ftp.ebi.ac.uk.goload
 ${MIRROR_WGET}/download_package ftp.geneontology.org.goload 
 ${MIRROR_WGET}/download_package snapshot.geneontology.org.goload
 ${MIRROR_WGET}/download_package snapshot.geneontology.org.goload.noctua
-${MIRROR_WGET}/download_package current.geneontology.org/annotations/rgd.gaf.gz
+
+TAG: goload-6-0-16-5
+DATE: 03/08/2021
+STAFF: lec
+TR13472/run complexes.tsv go_propery additions for every load
+add 'proteincomplex.sh'
 
 TAG: goload-6-0-16-4
 DATE: 02/19/2021
